- tomcat foregrounded - bugfixes